core/cu29_derive/tests/compile_fail/cu_msg/invalid_attribute.rs
use cu29_derive::gen_cumsgs;

const CONFIG_FILE: &str = "/path/to/config.ron";

gen_cumsgs!(CONFIG_FILE);

fn main() {}
